2009-11-20  Michael Hutchinson  <mhutchinson@novell.com>

	* Project/CProject.cs: Track API. Get correct configuration.

2009-11-06  Levi Bard  <taktaktaktaktaktaktaktaktaktak@gmail.com>

	* Parser/CDocumentParser.cs:
	* Parser/TagDatabaseManager.cs: Lock projectinfo on update.

2009-11-06  Levi Bard  <taktaktaktaktaktaktaktaktaktak@gmail.com>

	* Gui/EditPackagesDialog.cs: Don't let bad packages break
	  scanning.

2009-11-06  Levi Bard  <taktaktaktaktaktaktaktaktaktak@gmail.com>

	* Gui/DataProvider.cs: Escape text for parameter completion.

2009-11-05  Lluis Sanchez Gual  <lluis@novell.com>

	* Gui/CompilerPanel.cs:
	* Gui/EditPackagesDialog.cs:
	* ProjectPad/ProjectPackagesFolderNodeBuilder.cs: Use the
	  correct method for getting the active configuration.

2009-10-30  Lluis Sanchez Gual  <lluis@novell.com>

	* AssemblyInfo.cs:
	* CBinding.addin.xml: Bump MD version.

2009-10-29  Lluis Sanchez Gual  <lluis@novell.com>

	* gtk-gui/generated.cs:
	* gtk-gui/CBinding.AddPathDialog.cs:
	* gtk-gui/CBinding.CompilerPanel.cs:
	* gtk-gui/CBinding.PackageDetails.cs:
	* gtk-gui/CBinding.AddLibraryDialog.cs:
	* gtk-gui/CBinding.EditPackagesDialog.cs:
	* gtk-gui/CBinding.OutputOptionsPanel.cs:
	* gtk-gui/CBinding.CodeGenerationPanel.cs:
	* gtk-gui/CBinding.GeneralOptionsPanel.cs: Flush.

2009-10-13  Lluis Sanchez Gual  <lluis@novell.com>

	* Project/CProject.cs:
	* Project/CProjectServiceExtension.cs: Properly resolve active
	  configuration.

2009-10-07  Lluis Sanchez Gual  <lluis@novell.com>

	* AssemblyInfo.cs:
	* CBinding.addin.xml: Bump MD version.

2009-10-02  Michael Hutchinson  <mhutchinson@novell.com>

	* Makefile.am:
	* CBinding.csproj:
	* CBinding.addin.xml:
	* Gui/CTextEditorExtension.cs:
	* Gui/SwapSourceHeaderCommand.cs: Only show the swap
	  source/header command contextually. Fixes "Bug 544022 -
	  "Swap source/header" is visible in context menu for all
	  files".

2009-09-23  Lluis Sanchez Gual  <lluis@novell.com>
