@@ -1,3 +1,15 @@
+2009-12-01  Lluis Sanchez Gual  <lluis@novell.com>
+
+	* Project/CProject.cs:
+	* Gui/CompilerPanel.cs:
+	* Gui/EditPackagesDialog.cs:
+	* Project/CProjectServiceExtension.cs:
+	* ProjectPad/ProjectPackagesFolderNodeBuilder.cs: Introduced
+	  the ConfigurationSelector class to all methods that
+	  previously took a configuration name as string. This
+	  eliminates the ambiguity between solution configuration
+	  names and project configuration names.
+
 2009-11-20  Michael Hutchinson  <mhutchinson@novell.com>
 
 	* Project/CProject.cs: Track API. Get correct configuration.
